iPhone issues - force user comments with words longer than the screen to wrap

--- a/resources/assets/sass/extra.scss
+++ b/resources/assets/sass/extra.scss
@@ -32,3 +32,17 @@ img {
 blockquote {
   font-size: unset;
 }
+
+
+/* make overly long words break */
+.break-long-words {
+	-ms-word-break: break-all;
+	word-break: break-all;
+
+	/* Non standard for webkit */
+	word-break: break-word;
+
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
+}
